--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,21 @@
-<app-home-screen></app-home-screen>
+<nav class="navbar navbar-expand-custom navbar-mainbg">
+    <a class="navbar-brand navbar-logo" href="#">PSY 323 Cognitive Testing</a>
+    <button class="navbar-toggler" type="button" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <i class="fas fa-bars text-white"></i>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+            <div class="hori-selector"><div class="left"></div><div class="right"></div></div>
+            <li class="nav-item">
+                <a class="nav-link" href=" "><i class="fas fa-tachometer-alt"></i>Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="about"><i class="far fa-address-book"></i>About</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+<h1 class="title">Brown-Peterson Task</h1>
+<p class="subtitle">A cognitive psychology test designed to investigate the abilities of short-term memory.</p>
+<button mat-fab extended class="next" [routerLink]="['/instructions']">
+    <mat-icon>arrow_forward</mat-icon>Next</button>
