finished navigation bar, next button, routes, and instructions component. Created task component folder to be used when putting the logic for the task in.

--- a/src/app/home-screen/home-screen.component.html
+++ b/src/app/home-screen/home-screen.component.html
@@ -1,13 +1,6 @@
-<!-- <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="#">Brown-Peterson</a>
-      </div>
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-      </ul>
-    </div>
-  </nav>
-<div> -->
-
-
+<app-nav></app-nav>
+<h1 class="title">Brown-Peterson Task</h1>
+<p class="subtitle">A cognitive psychology test designed to investigate the abilities of short-term memory.</p>
+<button mat-fab extended class="next" (click)="onClick()">
+    <mat-icon>arrow_forward</mat-icon>Next
+</button>
