--- a/src/app/instructions/instructions.component.scss
+++ b/src/app/instructions/instructions.component.scss
@@ -1,14 +1,14 @@
 .title{
     text-align: center;
-    margin-top: 5%;
+    margin-top: 3%;
 }
 
 .instructions{
     margin-left: 5rem;
     margin-right: 5rem;
-    text-align: center;
+    text-align: justify;
     font-size: large;
-    word-spacing: 2%;
+    line-height: 1.5;
 }
 
 .next{
@@ -16,4 +16,11 @@
     margin-left: 45%;
     margin-right: 5rem;
     text-align: center;
+}
+
+.message{
+    text-align: center;
+    font-size: large;
+    margin-top: 5%;
+    font-style: italic;
 }
