added proctor instructions

--- a/src/app/participant-instructions/participant-instructions.component.html
+++ b/src/app/participant-instructions/participant-instructions.component.html
@@ -1,6 +1,6 @@
 <app-nav></app-nav>
 <div class="container">
-    <h1 class="title">Instructions</h1>
+    <h1 class="title">Task Instructions</h1>
     
     <p class="instructions">
         A consonant trigram, for example XFG, will appear in the middle of the screen for one second. 
