updated routes to match layout of sdd

--- a/src/app/proctor-instructions/proctor-instructions.component.html
+++ b/src/app/proctor-instructions/proctor-instructions.component.html
@@ -8,5 +8,5 @@
         will appear. Click this button to begin the task.
     </p>
     <button mat-fab extended class="next" (click)="onClick()">
-        <mat-icon>arrow_forward</mat-icon>Start Task
+        <mat-icon>arrow_forward</mat-icon>Go To Controls
     </button>
