--- a/src/app/control-panel/control-panel.component.html
+++ b/src/app/control-panel/control-panel.component.html
@@ -1,5 +1,5 @@
 <app-nav></app-nav>
-<p>control-panel works!</p>
+<p>Control Panel</p>
 <button mat-fab extended class="next" (click)="onClick()">
     <mat-icon>arrow_forward</mat-icon>Participant Instructions
 </button>
