Updated participant instructions

--- a/src/app/participant-instructions/participant-instructions.component.html
+++ b/src/app/participant-instructions/participant-instructions.component.html
@@ -3,22 +3,20 @@
     <h1 class="title">Task Instructions</h1>
     
     <p class="instructions">
-        A consonant trigram, for example XFG, will appear in the middle of the screen for one second. 
-        Study this trigram as you will be asked to recall it later. 
-        When the trigram disappears, you will see a three-digit number, such as 481, appear. 
-        You should start counting backwards, out loud, by 3. The computer helps you out for the first response, in this case showing 478 one second later. 
-    </p>
+        Start each trial by clicking once on the 'Next' button. Three letters
+        (called a trigram) will appear in the frame on the left. Study this trigram
+        as you will be asked to recall it later. When the trigram disappears, you
+        will see a series of number pairs.  Your task is to click on the even number in each pair.       </p>
     <p class="instructions"> 
-        Subsequently, the computer alternates green and blue circles. Each time you see one of these circles, subtract 3. 
-        In the example above, you count down to 469 by the time the second green circle is shown.
-        At test, you are asked one of two questions: If you are asked to recall the trigram, respond with "XJF". 
-        If you are asked to enter the final number, respond with "469". You will be told if you are correct or not.
-        It is important to try to do both tasks.
+        After you have clicked on the even number you will either see another number pair or you will be prompted to recall the
+        trigram. A set of letters will appear from which you can indicate your recollection of the trigram.
+        Click on the appropriate letter buttons in the order of the trigram. For example, if the trigram were JFK, you
+        would click the J button first, the F button second, and the K button last.
     </p> 
     <p class="instructions">
-        You will be asked to report the trigram on half the trials, and will be asked to report the final number on other trials.
+        Continue through the task until you have completed all trials.
     </p>
-    <p class="message">
+        <p class="message">
         There is no way to correct mistakes, so be careful!    
     </p>
     
