--- a/src/app/proctor-instructions/proctor-instructions.component.html
+++ b/src/app/proctor-instructions/proctor-instructions.component.html
@@ -6,7 +6,7 @@
         Before continuing to the test, a control panel will appear on the screen. This panel will allow you to control
         the parameters of the test. The control panel will ask you for:
     </p>
-    <ul class="instructions">
+    <ul class="list">
         <li>Total Number of trials</li>
         <li>Distractor task quantity 1</li>
         <li>Distractor task quantity 2</li>
