--- a/src/app/proctor-instructions/proctor-instructions.component.scss
+++ b/src/app/proctor-instructions/proctor-instructions.component.scss
@@ -5,6 +5,14 @@
 .instructions{
     margin-left: 5rem;
     margin-right: 5rem;
+    text-align: center;
+    font-size: large;
+    line-height: 1.5;
+}
+
+.list{
+    margin-left: 40%;
+    margin-right: 5rem;
     text-align: justify;
     font-size: large;
     line-height: 1.5;
