made component to display trigram

--- a/src/app/participant-instructions/participant-instructions.component.html
+++ b/src/app/participant-instructions/participant-instructions.component.html
@@ -23,7 +23,7 @@
         Participant Code: {{ sPCode }}
         <input required [(ngModel)]="sPCode" (ngModelChange)="checkQuantityEmpty(sPCode)"><br><br>
 
-        <button (click)="onSubmit()" [disabled]="isDisabled()">Submit</button>
+        <button mat-fab extended class="submit" (click)="onSubmit()" [disabled]="isDisabled()">Submit</button>
     </p>
     
     
