added validator for trial length, centered display of control panel

--- a/src/app/control-panel/control-panel.component.html
+++ b/src/app/control-panel/control-panel.component.html
@@ -1,5 +1,5 @@
 <app-nav></app-nav>
-<div class="col-xs-12">
+<div class="instructions">
     <form [formGroup]="controlForm">
         <div class="col-xs-12">
             <h1 class="title">Control Panel</h1>
