--- a/src/app/control-panel/control-panel.component.scss
+++ b/src/app/control-panel/control-panel.component.scss
@@ -1,8 +1,6 @@
 //Class Selector Styles
 .instructions{
-    margin-left: 5rem;
-    margin-right: 5rem;
-    text-align: justify;
+    text-align: center;
     font-size: large;
     line-height: 1.5;
 }
