Added validation Logic for control-panel; Turned participantCode into a form and added validation logic to it as well.

--- a/src/app/control-panel/control-panel.component.html
+++ b/src/app/control-panel/control-panel.component.html
@@ -14,7 +14,7 @@
 
             <label>Distractor Task Quantity 3:</label>
             <input formControlName="distractorthree"><br><br>
-            <button mat-fab extended class="submit" (click)="onSubmit()">Submit</button>
+            <button mat-fab extended class="submit" (click)="onSubmit()" [disabled]="isDisabled()">Submit</button>
         </div>
     </form>
 </div>
