--- a/src/app/participant-instructions/participant-instructions.component.html
+++ b/src/app/participant-instructions/participant-instructions.component.html
@@ -1,29 +1,21 @@
 <app-nav></app-nav>
-<div class="container">
-    <h1 class="title">Task Instructions</h1>
-    
-    <p class="instructions">
+<div class="container instructions">
+    <form [formGroup]="pInstrForm">
+        <h1 class="title">Task Instructions</h1>
         Start each trial by clicking once on the 'Next' button. Three letters
         (called a trigram) will appear in the frame on the left. Study this trigram
         as you will be asked to recall it later. When the trigram disappears, you
-        will see a series of number pairs.  Your task is to click on the even number in each pair.       </p>
-    <p class="instructions"> 
+        will see a series of number pairs.  Your task is to click on the even number in each pair.<br><br>
         After you have clicked on the even number you will either see another number pair or you will be prompted to recall the
         trigram. A set of letters will appear from which you can indicate your recollection of the trigram.
         Click on the appropriate letter buttons in the order of the trigram. For example, if the trigram were JFK, you
-        would click the J button first, the F button second, and the K button last.
-    </p> 
-    <p class="instructions">
+        would click the J button first, the F button second, and the K button last.<br><br>
         Continue through the task until you have completed all trials.
-    </p>
-        <p class="message">
-        There is no way to correct mistakes, so be careful!    
-    </p>
-    <p class="instructions">
-        Participant Code: {{ sPCode }}
-        <input required [(ngModel)]="sPCode" (ngModelChange)="checkQuantityEmpty(sPCode)"><br><br>
-
-        <button mat-fab extended class="submit" (click)="onSubmit()" [disabled]="isDisabled()">Submit</button>
-    </p>
+        <p class="message">There is no way to correct mistakes, so be careful!</p>
+            <label>Participant Code: </label>
+            <input formControlName="participantCode"><br><br>
+            <button mat-fab extended class="submit" (click)="onSubmit()" [disabled]="isDisabled()">Submit</button>
+    </form>
+</div>
     
     
