--- a/src/app/task/task.component.scss
+++ b/src/app/task/task.component.scss
@@ -1,7 +1,7 @@
 .trigram-display {
     display: flex;
     flex-direction: row;
-    justify-content: left;
+    justify-content: center;
     align-items: center;
     margin-top: 5%;
     margin-bottom: 5%;
@@ -14,6 +14,12 @@
     -moz-animation: inAndOut 2s ease-in forwards;
     -webkit-animation: inAndOut 2s ease-in forwards;
     animation: inAndOut 3s ease-in forwards;
+  }
+
+  .num-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   
   @keyframes inAndOut {
