updated participant instructions and control panel

--- a/src/app/participant-instructions/participant-instructions.component.html
+++ b/src/app/participant-instructions/participant-instructions.component.html
@@ -12,7 +12,7 @@
         would click the J button first, the F button second, and the K button last.<br><br>
         Continue through the task until you have completed all trials.
         <p class="message">There is no way to correct mistakes, so be careful!</p>
-            <label>Participant Code: </label>
+            <label>Participant Code (4 digits): </label>
             <input formControlName="participantCode"><br><br>
             <button mat-fab extended class="submit" (click)="onSubmit()" [disabled]="isDisabled()">Submit</button>
     </form>
