Array strings created.

--- a/src/app/control-panel/control-panel.component.html
+++ b/src/app/control-panel/control-panel.component.html
@@ -24,4 +24,4 @@
 </div>
 
 <app-instructions *ngIf="showPartI"></app-instructions>
-<app-task *ngIf="showTask" [formInput]="randDistNum"></app-task>
+<app-task *ngIf="showTask" [formInput]="randDistNum" [trigram]="randTrigram"></app-task>
