--- a/src/app/task/task.component.html
+++ b/src/app/task/task.component.html
@@ -6,30 +6,51 @@
 </div>
 <div class="keyboard">
     <div class="num-button">
-        <button *ngIf="showKeys" (click)="recordResp('B', 0)" [disabled]="disableLetters[0]">B</button>
-        <button *ngIf="showKeys" (click)="recordResp('C', 1)" [disabled]="disableLetters[1]">C</button>
-        <button *ngIf="showKeys" (click)="recordResp('D', 2)" [disabled]="disableLetters[2]">D</button>
-        <button *ngIf="showKeys" (click)="recordResp('F', 3)" [disabled]="disableLetters[3]">F</button>
-        <button *ngIf="showKeys" (click)="recordResp('G', 4)" [disabled]="disableLetters[4]">G</button>
-        <button *ngIf="showKeys" (click)="recordResp('H', 5)" [disabled]="disableLetters[5]">H</button>
-        <button *ngIf="showKeys" (click)="recordResp('J', 6)" [disabled]="disableLetters[6]">J</button>
+        <button *ngIf="showKeys" (click)="recordResp('B')">B</button>
+        <button *ngIf="showKeys" (click)="recordResp('C')">C</button>
+        <button *ngIf="showKeys" (click)="recordResp('D')">D</button>
+        <button *ngIf="showKeys" (click)="recordResp('F')">F</button>
+        <button *ngIf="showKeys" (click)="recordResp('G')">G</button>
+        <button *ngIf="showKeys" (click)="recordResp('H')">H</button>
+        <button *ngIf="showKeys" (click)="recordResp('J')">J</button>
     </div>
     <div class="num-button">
-        <button *ngIf="showKeys" (click)="recordResp('K', 7)" [disabled]="disableLetters[7]">K</button>
-        <button *ngIf="showKeys" (click)="recordResp('L', 8)" [disabled]="disableLetters[8]">L</button>
-        <button *ngIf="showKeys" (click)="recordResp('M', 9)" [disabled]="disableLetters[9]">M</button>
-        <button *ngIf="showKeys" (click)="recordResp('N', 10)" [disabled]="disableLetters[10]">N</button>
-        <button *ngIf="showKeys" (click)="recordResp('P', 11)" [disabled]="disableLetters[11]">P</button>
-        <button *ngIf="showKeys" (click)="recordResp('Q', 12)" [disabled]="disableLetters[12]">Q</button>
+        <button *ngIf="showKeys" (click)="recordResp('K')">K</button>
+        <button *ngIf="showKeys" (click)="recordResp('L')">L</button>
+        <button *ngIf="showKeys" (click)="recordResp('M')">M</button>
+        <button *ngIf="showKeys" (click)="recordResp('N')">N</button>
+        <button *ngIf="showKeys" (click)="recordResp('P')">P</button>
+        <button *ngIf="showKeys" (click)="recordResp('Q')">Q</button>
     </div>
     <div class="num-button">
-        <button *ngIf="showKeys" (click)="recordResp('R', 13)" [disabled]="disableLetters[13]">R</button>
-        <button *ngIf="showKeys" (click)="recordResp('S',14)" [disabled]="disableLetters[14]">S</button>
-        <button *ngIf="showKeys" (click)="recordResp('T', 15)" [disabled]="disableLetters[15]">T</button>
-        <button *ngIf="showKeys" (click)="recordResp('V', 16)" [disabled]="disableLetters[16]">V</button>
-        <button *ngIf="showKeys" (click)="recordResp('W', 17)" [disabled]="disableLetters[17]">W</button>
-        <button *ngIf="showKeys" (click)="recordResp('X', 18)" [disabled]="disableLetters[18]">X</button>
-        <button *ngIf="showKeys" (click)="recordResp('Z', 19)" [disabled]="disableLetters[19]">Z</button>
+        <button *ngIf="showKeys" (click)="recordResp('R')">R</button>
+        <button *ngIf="showKeys" (click)="recordResp('S')">S</button>
+        <button *ngIf="showKeys" (click)="recordResp('T')">T</button>
+        <button *ngIf="showKeys" (click)="recordResp('V')">V</button>
+        <button *ngIf="showKeys" (click)="recordResp('W')">W</button>
+        <button *ngIf="showKeys" (click)="recordResp('X')">X</button>
+        <button *ngIf="showKeys" (click)="recordResp('Z')">Z</button>
     </div>
+</div>
+<div *ngIf="showExport">
+    <button mat-fab extended class="next" (click)="exportData()">Submit</button>
+</div>
+<div class="container instructions" *ngIf="showInstr">
+    <form [formGroup]="pInstrForm">
+        <h1 class="title">Task Instructions</h1>
+        Start each trial by clicking once on the 'Next' button. Three letters
+        (called a trigram) will appear in the frame on the left. Study this trigram
+        as you will be asked to recall it later. When the trigram disappears, you
+        will see a series of number pairs.  Your task is to click on the even number in each pair.<br><br>
+        After you have clicked on the even number you will either see another number pair or you will be prompted to recall the
+        trigram. A set of letters will appear from which you can indicate your recollection of the trigram.
+        Click on the appropriate letter buttons in the order of the trigram. For example, if the trigram were JFK, you
+        would click the J button first, the F button second, and the K button last.<br><br>
+        Continue through the task until you have completed all trials.
+        <p class="message">There is no way to correct mistakes, so be careful!</p>
+            <label for="partCode">Participant Code: </label>
+            <input id="partCode" formControlName="participantCode"><br><br>
+            <button mat-fab extended class="submit" (click)="onSubmit()" [disabled]="isDisabled()">Submit</button>
+    </form>
 </div>
 
