--- a/src/app/task/task.component.scss
+++ b/src/app/task/task.component.scss
@@ -45,3 +45,34 @@
       opacity: 0;
     }
   }
+
+  .title{
+    text-align: center;
+    margin-top: 3%;
+}
+
+.instructions{
+    margin-left: 5rem;
+    margin-right: 5rem;
+    text-align: justify;
+    font-size: large;
+    line-height: 1.5;
+}
+
+.next{
+    margin-top: 3rem;
+    margin-left: 45%;
+    margin-right: 5rem;
+    text-align: center;
+}
+
+.message{
+    text-align: center;
+    font-size: large;
+    margin-top: 5%;
+    font-style: italic;
+}
+.submit{
+    margin-top: 1%;
+    text-align: center;
+}
